version/0.17/_sources/api/solver/_autosummary/settings/multi_stage.rst.txt
:orphan:

.. _multi_stage:

multi_stage
===========

.. autoclass:: ansys.fluent.core.solver.settings_232.multi_stage.multi_stage
    :show-inheritance:

.. rubric:: Methods

==========================================   ==============================

Method                                                              Summary

==========================================   ==============================
:ref:`list_properties <list_properties_1>`       'list_properties' command.

==========================================   ==============================

.. rubric:: Named object type

:ref:`multi_stage_child <multi_stage_child>`


.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`advanced <advanced>`       'advanced' child.

==========================   =====================

