version/0.23/_sources/api/solver/_autosummary/settings/multi_stage.rst.txt
:orphan:

.. _multi_stage:

multi_stage
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.multi_stage.multi_stage
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`multi_stage_child <multi_stage_child>`


.. rubric:: Included in:

============================   ========================================

Parent                                                          Summary

============================   ========================================
:ref:`advanced <advanced_3>`       Enter solution method advanced menu.

============================   ========================================

